@@ -1,5 +1,7 @@
 Note: this log is only for work done since the conversion for 1.x
 
+16 August 2007
++ Applied resize patch supplied by Verdon Vaillancourt
 
 Version 1.4.1 -- 25 July 2007
 ----------------------------------------------------------------
